--- a/scss/_colorStyle.scss
+++ b/scss/_colorStyle.scss
@@ -102,6 +102,7 @@ $marquee_Word: #c9a567;
 
 //home
 $lv_BG: #cfab65;
+$game_Color: #7c5b1a;
 
 //slotPage
 $slotPage_boxBG: #ffffff;
@@ -221,6 +222,8 @@ $table_TitleSecondBG: linear-gradient(to top,#a2a2a2 0%,#cccccc 77%);
 $table_Title: #ffffff;
 $table_Border: #b78d4b;
 $table_innerBorder: #a8a8a8;
+$table_jumpWindow_TitleBG: linear-gradient(to top,#eeeeee 0%,#ffffff 100%);
+$table_jumpWindow_BG: #f1f1f1;
 
 //page
 @mixin pageStyle_1 {
@@ -490,449 +493,3 @@ input:disabled {
         }
     }
 }
-
-
-
-
-
-
-
-
-
-//主色系
-$BG: linear-gradient(to top,#101010 0%,#2b2b2b 100%);
-$mainBG_1: #101010;
-$mainBG_2: #252525;
-$mainBG_3: #1b1b1b;
-
-//內頁背景樣式
-@mixin bgStyle_1 {
-    width: 100%;
-    height: calc(100vh - 96px);
-    background: #101010;
-    box-sizing: border-box;
-    padding-bottom: 10px;
-    overflow-y: auto;
-}
-
-//主要字色
-$mainWord_1: #ffc13c;
-$mainWord_2: #fb770a;
-$mainWord_3: #e2e2e2;
-$mainWord_4: #cd8c2f;
-
-//主要邊框色
-$mainBorder_1: #ffc13c;
-$mainBorder_2: #957222;
-
-//金額色
-$money: #ffffff;
-$money_Sp: #e11515;
-
-
-
-//小提示字色
-
-$remind_Sp: #e11515;
-
-//選擇列字色+選擇列active
-$choose_BG: #262626;
-$choose_ActiveBG: #181818;
-$choose_Word: #ffc13c;
-$choose_ActiveWord: #ff4719;
-
-
-
-
-
-
-//頁面個別調整
-
-
-
-
-
-
-
-
-//登入頁登入區塊
-
-
-@mixin quick {
-    background: #000000;
-    border-radius: 1vw;
-    border: solid 1px #ffbb3a;
-    color: #ffbb3a;
-    font-size: 3.7vw;
-    font-weight: bold;
-}
-@mixin operateLV {
-    background: linear-gradient(to right,#4ffc21 0%,#09d217 99%);
-    border-radius: 1vw;
-    color: #000000;
-    font-size: 3vw;
-    font-weight: bold;
-    padding: 0.5vw 1.5vw;
-    display: flex;
-    align-items: center;
-}
-
-//主頁面按鈕
-@mixin gameListBG {
-    background: #1f1f1f;
-    border-radius: 2vw;
-    box-shadow: inset 2px 2px 3px 0 #fff3686b, inset -4px -4px 5px 0 #000000, 0 3px 15px 1px #00000080;
-    flex-shrink: 0;
-
-    ul {
-
-        li {
-
-            &:active,&.active {
-    
-                div {
-                    background: #090909;
-                }
-    
-                p {
-                    color: #ff4719;
-                }
-            }
-    
-            &::before {
-                background: #ffc13c;
-            }
-    
-            p {
-                color: #ffc13c;
-            }
-        }
-    }
-}
-
-//footer
-@mixin footerBG {
-    background: #181818;
-    border-top: solid 1px #ff4719;
-    display: flex;
-    align-items: center;
-}
-@mixin footerWord {
-    color: #ffc13c;
-    border-right: solid 1px #2d2d2d;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    &:last-child {
-        border: none;
-    }
-
-    &:active,&.active {
-        color: #ff4719;
-    }
-}
-
-//member
-@mixin member_WalletBox {
-    background: #faf8f6;
-    color: #000000;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    padding-left: 16px;
-    border-radius: 5vw 0 0 5vw;
-    font-size: 15px;
-    letter-spacing: 1px;
-    font-weight: bold;
-}
-@mixin mailBubble {
-    background: #e11515;
-    color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    padding: 0 2px 2px;
-    border-radius: 50%;
-    box-sizing: border-box;
-    position: absolute;
-}
-@mixin wordBox {
-    background: #252525;
-    color: #cd8c2f;
-    font-size: 12px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    box-sizing: border-box;
-    padding: 0 20px;
-    border-radius: 5px;
-    font-weight: bold;
-
-    .low {
-        color: #ff0000;
-    }
-
-    .middle {
-        color: #ff8600;
-    }
-
-    .high {
-        color: #5aa960;
-    }
-}
-
-//vip
-$vip_LevelBar: #3e3e3e;
-$vip_LevelCur: #0bca17;
-$vip_Word: #ffffff;
-
-//card
-$cardLinear: linear-gradient(to right,#fec026 0%,#ffae00 100%);
-$cardLinear_Empty: linear-gradient(120deg,#e8ebf2 0%,#cbcdd3 30%);
-$cardEmptyWord: #ffffff;
-$cardWord: #000000;
-@mixin cardStatus {
-    background: #ffffff;
-    color: #000000;
-    font-size: 12px;
-    opacity: 0;
-    padding: 4px 0;
-    text-align: center;
-    border-radius: 0 0 5px 5px;
-}
-
-//mail
-@mixin mailWrap {
-    background: #181818;
-    border: solid 1px #ffc13c;
-    border-radius: 5px;
-    position: relative;
-
-    &.read {
-        border-color: #a88335;
-        background: #101010;
-
-        .title {
-            color: #cd8c2f;
-        }
-
-        .textBox {
-
-            p,.date {
-                color: #cd8c2f;
-            }
-        }
-    }
-
-    .title {
-        color: #ffc13c;
-    }
-
-    .textBox {
-
-        p {
-            color: #e2e2e2;
-        }
-
-        .date {
-            color: #cd8c2f;
-        }
-    }
-}
-@mixin mailWrap_2 {
-    background: #2e2e2e;
-    border-radius: 5px;
-
-    .title {
-        color: #ffc13c;
-    }
-}
-
-
-//slotPage
-@mixin slotSearch {
-    background: #060606;
-    border: solid 1px #a88335;
-    padding: 4px 10px 4px 15px;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-}
-@mixin slotSearch_Input {
-    background: none;
-    border: none;
-    color: #ffc13c;
-    padding-left: 10px;
-    font-size: 13px;
-    font-weight: bold;
-    box-sizing: border-box;
-
-    &::placeholder {
-        color: #cd8c2f;
-    }
-}
-@mixin slotGameBox {
-    background: #2f2f2f;
-    border-radius: 5px;
-    position: relative;
-    font-size: 0;
-    box-sizing: border-box;
-    padding-bottom: 1.5vw;
-}
-@mixin slotGameBtn_1 {
-    background: #f5951f;
-    border-radius: 5px;
-    font-size: 3vw;
-    color: #000000;
-    font-weight: bold;
-
-    &:active,&.active {
-        background: #fb770a;
-        color: #ffffff;
-    }
-}
-@mixin slotGameBtn_2 {
-    background: #30ebff;
-    border-radius: 5px;
-    font-size: 3vw;
-    color: #000000;
-    font-weight: bold;
-
-    &:active,&.active {
-        background: #0a92be;
-        color: #ffffff;
-    }
-}
-
-
-
-
-
-//help
-$help_remind: #ff4719;
-$help_box_BG: #2a2a2a;
-$help_box_Border: #979797;
-
-
-//button
-
-
-
-//無背景按鈕常用類
-@mixin noBgBtn_Normal {
-    background: #101010;
-    border-radius: 3px;
-    border: solid 1px #a88335;
-    color: #ffc13c;
-    font-size: 13px;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    &:active,&.active {
-        background: #ffc13c;
-        border-color: #ffc13c;
-        color: #101010;
-    }
-}
-$help_reBtn_BG: #282828;
-
-//長選項按鈕
-@mixin longBtn {
-    background: #252525;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 24px;
-    box-sizing: border-box;
-
-    p {
-        display: flex;
-        align-items: center;
-        color: #ffc13c;
-        font-size: 4vw;
-        font-weight: bold;
-    }
-}
-
-//大灰切換按鈕
-@mixin bigGrayBtn {
-    background: #272727;
-    border-radius: 1vw 1vw 0 0;
-    color: #999999;
-    font-size: 4vw;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 2vw;
-
-    &:active,&.active {
-        background: linear-gradient(to right, #ff4b33 0%, #d8001f 98%);
-        color: #ffffff;
-    }
-}
-
-//假select樣式按鈕
-@mixin fakeSelect {
-    background: #101010;
-    border-radius: 3px;
-    border: solid 1px #ffc13c;
-    color: #ffffff;
-    font-size: 4vw;
-    padding: 0 15px 4px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    // justify-content: space-between;
-    font-weight: bold;
-
-    // i {
-    //     display: block;
-    //     width: 0;
-    //     height: 0;
-    //     border-style: solid;
-    //     border-width: 6px 4px 0 4px;
-    //     border-color: #957222 transparent;
-    // }
-}
-
-
-
-
-//input
-
-
-
-//member頁用input
-@mixin memberInput {
-    border: solid 1px transparent;
-    background: #272727;
-    font-size: 14px;
-    font-weight: bold;
-    box-sizing: border-box;
-    color: #ffffff;
-    border-radius: 5px;
-    padding-left: 15px;
-    pointer-events: none;
-
-    &::placeholder {
-        color: #ffffff;
-    }
-
-    &.active {
-        background: #101010;
-        border-color: #ffc13c;
-        pointer-events: visible;
-    }
-}
-
-
-
