--- a/scss/_colorStyle.scss
+++ b/scss/_colorStyle.scss
@@ -19,14 +19,14 @@ $mainColor_4: #ffffff;
 $border_1: #b8151a;
 
 //remind
-$remind: #3c4acc;
+$remind: #173fde;
 $disable: #7f7f7f;
 
 //可選字色
 $click: #ff5a00;
 
 //shadow
-$mainShadow_1: #0000001d;
+$mainShadow_1: #00000033;
 $mainShadow_2: #00000080;
 
 //header
@@ -356,7 +356,7 @@ $lightBtn_secondColor: #168516;
     border-radius: 30px;
     border: solid 1px #daaf6d;
     color: #b6832d;
-    font-size: 3.4vw;
+    font-size: 4vw;
     font-weight: bold;
 
     &:active,&.active {
