--- a/scss/_eventApply.scss
+++ b/scss/_eventApply.scss
@@ -292,6 +292,24 @@
                 display: block;
             }
 
+            &.fail {
+
+                ul {
+                    position: relative;
+
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        left: 0;
+                        top: 0;
+                        width: 100%;
+                        height: 100%;
+                        background: $filter;
+                        opacity: 0.5;
+                    }
+                }
+            }
+
             .title {
                 width: 100%;
                 height: 9vw;
