--- a/scss/_record.scss
+++ b/scss/_record.scss
@@ -85,10 +85,12 @@
         }
 
         .check {
-            width: 100%;
+            width: 70%;
             height: 11vw;
             @include secondBtn;
-            margin-bottom: 16px;
+            display: block;
+            font-size: 4vw;
+            margin: 0 auto 16px;
         }
     }
 
@@ -162,6 +164,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
+                    padding: 0 8px;
 
                     &:last-child {
                         border: none;
@@ -252,6 +255,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
+                    padding: 0 8px;
 
                     &:last-child {
                         border: none;
@@ -270,8 +274,8 @@
             height: auto;
             background: $bg_2;
             border-radius: 16px;
-            box-shadow: 0 2px 2px 1px $mainShadow_1;
-            padding: 0 12px;
+            box-shadow: 0 1px 2px 1px $mainShadow_1;
+            padding: 0 8px;
             margin-bottom: 10px;
 
             &.display {
@@ -303,8 +307,8 @@
                     }
                     
                     i {
-                        width: 4vw;
-                        height: 4vw;
+                        width: 3.4vw;
+                        height: 3.4vw;
                         margin-left: 5px;
 
                         &.search_ic {
@@ -328,6 +332,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
+                    padding: 0 8px;
 
                     &:last-child {
                         border: none;
