--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -21,7 +21,7 @@
         align-items: center;
         justify-content: center;
         flex-shrink: 0;
-        padding: 0 3vw;
+        padding: 0 3vw 2px;
 
         p {
             color: $marquee_Title;
@@ -199,7 +199,7 @@
         width: 100%;
         height: auto;
         grid-template-columns: repeat(2,1fr);
-        gap: 8px 16px;
+        gap: 8px;
         display: none;
 
         &.display {
@@ -208,18 +208,111 @@
 
         &.hot {
 
-            li {
-                border-radius: 16px;
+            .gameBox {
+                width: auto;
+                height: auto;
+                background: $slotPage_boxBG;
+                border-radius: 10px;
+                border: solid 1px $slotPage_boxBorder;
+                font-size: 0;
                 overflow: hidden;
+    
+                .title {
+                    width: 100%;
+                    height: 8vw;
+                    display: flex;
+                    justify-content: space-between;
+    
+                    p {
+                        width: 73%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        padding-left: 8px;
+                        
+                        span {
+                            width: 100%;
+                            color: $mainColor_3;
+                            font-size: 3.4vw;
+                            font-weight: bold;
+                            @include hiddenText;
+                        }
+                    }
+    
+                    .loveBox {
+                        width: 18%;
+                        height: 100%;
+                        background: $slotPage_box_loveBG;
+                        display: flex;
+                        align-items: center;
+                        position: relative;
+    
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            bottom: 0;
+                            left: -4vw;
+                            width: 0;
+                            height: 0;
+                            border-style: solid;
+                            border-width: 8vw 0 0 4vw;
+                            border-color: $slotPage_box_loveBG transparent;
+                        }
+    
+                        &.active {
+                            background: $slotPage_box_loveBG_active;
+    
+                            &::before {
+                                border-color: $slotPage_box_loveBG_active transparent;
+                            }
+                        }
+    
+                        i {
+                            width: 5vw;
+                            height: 4vw;
+                            margin-left: 1vw;
+                        }
+                    }
+                }
+    
+                .btnBox {
+                    width: 100%;
+                    height: auto;
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-evenly;
+                    padding: 8px;
+    
+                    button {
+                        width: 80%;
+                        height: 8vw;
+                        @include mainBtn;
+                        font-size: 3vw;
+    
+                        &.try {
+                            @include lightBtn_1;
+                            font-size: 3vw;
+                            margin-right: 5px;
+                        }
+
+                        span {
+                            display: block;
+                            transform: scale(0.9);
+                        }
+                    }
+                }
             }
         }
 
         &.sport {
             grid-template-columns: repeat(1,1fr);
+            padding: 0 8px;
 
             li {
 
                 .textBox {
+                    top: 16px;
+                    left: 16px;
 
                     .title {
                         font-size: 7vw;
