--- a/scss/_invite.scss
+++ b/scss/_invite.scss
@@ -12,6 +12,7 @@
             color: $mainColor_2;
             font-size: 4vw;
             font-weight: bold;
+            line-height: 5.5vw;
             margin: 10px 0 5px;
         }
 
@@ -60,7 +61,7 @@
         height: auto;
         display: flex;
         align-items: center;
-        margin-bottom: 16px;
+        margin-bottom: 10px;
 
         .star_ic {
             width: 4vw;
@@ -116,6 +117,7 @@
     .inviteImg {
         width: 100%;
         height: 0;
+        margin-top: 10px;
         padding-top: 118vw;
     }
 }
