--- a/scss/_jumpWindow.scss
+++ b/scss/_jumpWindow.scss
@@ -701,14 +701,14 @@
             ul {
                 width: 100%;
                 height: auto;
-                padding: 24px;
+                padding: 24px 24px 32px;
                 
                 li {
                     width: 100%;
                     height: 9.87vw;
-                    margin-bottom: 20px;
+                    margin-bottom: 15px;
                     @include lightBtn_1;
-                    border-radius: 5px;
+                    font-size: 4vw;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -729,7 +729,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                padding: 48px 24px;
+                padding: 32px 24px;
 
                 .img {
                     width: 15vw;
@@ -743,12 +743,14 @@
         &.waterWindow_1,
         &.waterWindow_2,
         &.betRecord,
-        &.pointWindow {
+        &.pointWindow,
+        &.partnerBox {
+            padding: 0 16px 25px;
             
             .content {
                 width: 100%;
                 height: auto;
-                padding: 16px;
+                padding: 16px 16px 0;
                 max-height: 50vh;
                 overflow-y: auto;
 
@@ -853,7 +855,7 @@
                                     color: $mainColor_2;
                                 }
                             }
-                            &:nth-of-type(3) {
+                            &:last-child {
                                 padding-right: 12px;
                             }
 
@@ -931,6 +933,41 @@
                     text-align: center;
                     margin-top: 5px;
                 }
+            }
+        }
+
+        //eventWindow
+        &.eventWindow {
+            
+            .content {
+                max-height: 50vh;
+                overflow-y: auto;
+                
+                img {
+                    margin: 10px 0;
+                }
+
+                p {
+                    color: $mainColor_3;
+                    font-size: 3.7vw;
+                    font-weight: bold;
+                    line-height: 4.5vw;
+
+                    &.smallTitle {
+                        color: $mainColor_2;
+                        font-size: 4vw;
+                        margin-bottom: 10px;
+                        text-align: center;
+                    }
+                }
+            }
+
+            button {
+                width: 70%;
+                height: 11vw;
+                @include mainBtn;
+                display: block;
+                margin: 24px auto;
             }
         }
 
