--- a/scss/_mail.scss
+++ b/scss/_mail.scss
@@ -331,11 +331,11 @@
             ul {
                 width: 100%;
                 height: auto;
-                padding-top: 24px;
+                padding: 0 16px;
 
                 li {
                     width: 100%;
-                    height: 12vw;
+                    height: 15vw;
                     @include innerBG_2;
                     display: flex;
                     align-items: center;
@@ -343,14 +343,14 @@
                     position: relative;
                     padding: 0 16px 0 21px;
                     overflow: visible;
-                    margin-bottom: 32px;
+                    margin-bottom: 10px;
 
                     &::before {
                         border-radius: 30px 0 0 30px;   
                     }
 
                     p {
-                        width: 52vw;
+                        width: 46vw;
                         height: auto;
                         color: $mainColor_2;
                         font-size: 4vw;
@@ -362,8 +362,7 @@
                             color: $disable;
                             font-weight: bold;
                             position: absolute;
-                            top: -20px;
-                            right: 0;
+                            right: 40px;
                         }
                     }
 
